cinnamon-settings-daemon (2.0.10-1~) UNRELEASED; urgency=low

  * Initial release (Closes: #745915).
  * Add autopkgtests.
  * Update install files.

 -- Maximiliano Curia <maxy@debian.org>  Thu, 20 Feb 2014 16:51:27 +0100